# FaceRecognition

./: .gitignore  CMakeLists.txt  FaceRecognition.cpp  FaceRecognition.h  README.md  completion_test.c  logging.h  main.cpp
cmake/: .clean.sh.swp  clean_dataset.sh  get_dataset.py  main  train_dataset.py
pythonDependency/: cmake_clean.sh  get_dataset.py
sequencer/: seq  seq.cpp
