cmake_minimum_required(VERSION 3.15)
project(main)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-std=c++17 -lstdc++fs ${CMAKE_CXX_FLAGS}")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(main main.cpp FaceRecognition.cpp)
target_link_libraries(main ${OpenCV_LIBS})
